--- a/q5.html
+++ b/q5.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <meta name="viewport" contnt="width=device-width, initial-scale=1.0">
+     <title>Responsive Image</title>
 </head>
 <body>
     <main>
-        <h3>Responsive Image</h3>
+        <h1>Responsive Image</h1>
         <figure>
             <picture>
-                <source srcset="readmeimages/400x600.png"
+                <source srcset="readmeimages/400x600.png" alt="Responsive Image"
                     media="(orientation: portrait)">
                 <img src="readmeimages/728x200.png" />
             </picture>
